--- a/date/2024-10/index.htm
+++ b/date/2024-10/index.htm
@@ -274,8 +274,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-8-free-high-speed-nodes.htm">10月8日更新21.6M/S，2024年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了韩国、加拿大、香港、新加坡、欧洲、美国、日本等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-12-14-shadowrocket-node.htm">12月14日更新18.5M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、香港、韩国、日本、美国、加拿大、新加坡等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -284,8 +284,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-25940.htm">git下载、安装、配置与简单应用</a></h4>
-                <p>目录 1 git下载、安装与配置 1.1下载与安装 1.1.1登录git官网：Git (git-scm.com)点击击图中红线圈出的Downloads,进入下载页面。 1.1.2根据自己系统，下载相应</p>
+                <h4><a href="/free-nodes/2024-11-23-clash-v2ray-ss-ssr.htm">11月23日更新20.6M/S，2024年最新高速Clash/SSR/Shadowrocket/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、新加坡、香港、欧洲、日本、美国、韩国等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -294,8 +294,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-12-26-free-ssr-subscribe.htm">12月26日更新20.9M/S，2024年最新高速SSR/V2ray/Clash/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了美国、加拿大、韩国、欧洲、日本、新加坡、香港等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-12-12-free-ssr-node.htm">12月12日更新22.1M/S，2024年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了日本、香港、新加坡、韩国、加拿大、美国、欧洲等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -304,8 +304,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-20-shadowrocket-node.htm">10月20日更新23M/S，2024年最新高速SSR/Clash/Shadowrocket/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、欧洲、加拿大、美国、新加坡、香港、韩国等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-25475.htm">动物预防接种计划表（动物预防接种实验报告）</a></h4>
+                <p>摘要：       今天给各位分享动物预防接种计划表的知识，其中也会对动物预防接种实验报告进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、怎样编制猪场防疫计划.</p>
             </div>
         </div>
     </div>
@@ -314,8 +314,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-30615.htm">动物疫苗生产许可（动物疫苗生产许可管理办法）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈动物疫苗生产许可，以及动物疫苗生产许可管理办法对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、给羊打疫苗的公司的行政许可手续...    </p>
+                <h4><a href="/news/article-26870.htm">宠物领养协议模板图片 宠物领养协议模板图片大全</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于宠物领养协议模板图片的问题，于是小编就整理了3个相关介绍宠物领养协议模板图片的解答，让我们一起看看吧。领养猫捆绑合同有法律效应吗</p>
             </div>
         </div>
     </div>
@@ -324,8 +324,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-31571.htm">如何在IDEA 中配置 Maven</a></h4>
-                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Maven 是一个能使我们的java程序开发节省时间和精力，是开发变得相对简单，还能使开发规范化的工具。</p>
+                <h4><a href="/news/article-24547.htm">动物医院实验室常见设备仪器有哪些（动物医院实验室常见设备仪器有哪些品牌）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈动物医院实验室常见设备仪器有哪些，以及动物医院实验室常见设备仪器有哪些品牌对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、常用生物医学..</p>
             </div>
         </div>
     </div>
@@ -334,8 +334,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-12-18-free-node-subscribe.htm">12月18日更新19.2M/S，2024年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了美国、加拿大、新加坡、欧洲、韩国、日本、香港等地区,最高速度可达19.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-11-14-clash-v2ray-ss-ssr.htm">11月14日更新20.2M/S，2024年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了韩国、加拿大、日本、美国、香港、新加坡、欧洲等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -344,8 +344,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-19039.htm">中国动物疫苗生产企业排名榜 中国动物疫苗生产企业排名榜最新</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于中国动物疫苗生产企业排名榜的问题，于是小编就整理了2个相关介绍中国动物疫苗生产企业排名榜的解答，让我们一起看看吧。辉瑞和科兴是哪</p>
+                <h4><a href="/news/article-19496.htm">初中学历能考什么证来提升自己（初中学历可以考个什么证）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈初中学历能考什么证来提升自己，以及初中学历可以考个什么证对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、初中学历怎么提升学历啊...   </p>
             </div>
         </div>
     </div>
@@ -354,8 +354,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-12-19-clash-node.htm">12月19日更新20.6M/S，2024年最新高速Clash/V2ray/SSR/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了香港、新加坡、加拿大、日本、美国、欧洲、韩国等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-23161.htm">有什么品牌的春天小宝宝衣服值得入手呢(小宝宝的衣服什么牌子好)</a></h4>
+                <p>的小宝宝值得入手？很多朋友对这方面很关心，蝶侠整理了相关文章，供大家参考，一起来看一下吧！本文目录一览：1、棉袄品牌排行榜前十名2、有什么品牌的春天小宝宝衣服值得入手？3、女棉衣品牌大全排行榜(防寒服</p>
             </div>
         </div>
     </div>
@@ -364,8 +364,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-22701.htm">猫三联打几针多少钱一次（猫三联要多少钱第一针）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈猫三联打几针多少钱一次，以及猫三联要多少钱第一针对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、猫要打几次疫苗啥价格,猫三联是多少钱?..</p>
+                <h4><a href="/free-nodes/2024-11-6-free-shadowrocket-node.htm">11月6日更新18.2M/S，2024年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、韩国、新加坡、美国、日本、香港、欧洲等地区,最高速度可达18.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -376,7 +376,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">15</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
                                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
                                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
                                 <h4><span class="badge" style="float: right;">25</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
